--- a/media/scss/partials/_menu.scss
+++ b/media/scss/partials/_menu.scss
@@ -27,7 +27,8 @@
             transition: all 1s ease-in-out;
 
     .drink {
-        font-size: 40px;
+        font-size: 15px;
+        padding: 5px;
     }
 
     .fade-out {
