--- a/templates/boozy-menu/header.html
+++ b/templates/boozy-menu/header.html
@@ -11,6 +11,6 @@
         ng-class="{'active': currentMenu == 'advanced'}"  
         ng-click="currentMenu = 'advanced'"
     >advanced</h2>
-    <div class="hide font float-right cursor-pointer" ng-click="hideMenu = true">x</div>
+    <div class="hide font float-right cursor-pointer" ng-click="hideMenu = true"><i class="fa fa-remove"></i></div>
     <div class="clear-both"></div>
 </div>
