--- a/templates/boozy-menu/bar-menu.html
+++ b/templates/boozy-menu/bar-menu.html
@@ -9,7 +9,7 @@
             data-drink='{ "name": "manhattan", "strength": 2 }'
         >Manhattan</drink>
         <drink
-            class="drink booze fa fa-glass cursor-pointer float-left"
+            class="drink booze fa fa-beer cursor-pointer float-left"
             data-drink='{ "name": "lagunitas-ipa", "strength": 1 }'
         >Lagunitas IPA</drink>
         <drink
