--- a/media/css/utils.css
+++ b/media/css/utils.css
@@ -1,57 +1,37 @@
 /* this is where the float classes live */
-/* line 2, ../scss/utils.scss */
 .float-left {
-  float: left;
-}
+  float: left; }
 
-/* line 5, ../scss/utils.scss */
 .float-right {
-  float: right;
-}
+  float: right; }
 
-/* line 8, ../scss/utils.scss */
 .clear-both {
-  clear: both;
-}
+  clear: both; }
 
-/* line 11, ../scss/utils.scss */
 .clear-left {
-  clear: left;
-}
+  clear: left; }
 
-/* line 14, ../scss/utils.scss */
 .clear-right {
-  clear: right;
-}
+  clear: right; }
 
-/* line 17, ../scss/utils.scss */
 .select-none {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
-}
+  user-select: none; }
 
 /* this is where the display classes live */
-/* line 26, ../scss/utils.scss */
 .display-inline-block {
-  display: inline-block;
-}
+  display: inline-block; }
 
-/* line 29, ../scss/utils.scss */
 .display-none {
-  display: none;
-}
+  display: none; }
 
 /* this is where the cursor classes live */
-/* line 33, ../scss/utils.scss */
 .cursor-pointer {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
-/* line 36, ../scss/utils.scss */
 .cursor-default {
-  cursor: default;
-}
+  cursor: default; }
